fixing spacing between sections

--- a/style.css
+++ b/style.css
@@ -65,10 +65,11 @@ dd {
 .menu {
     display: grid;
     grid-template-columns: 200px 1fr;
-    /* left fixed width, right flexible */
+    grid-auto-rows: 1fr;
     border: 1px solid #255945;
     background: #333;
     margin: 2rem 0;
+    min-height: 60vh;
 }
 
 .menu-item {
